objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ANZ_Quantity__c</fullName>
        <label>ANZ Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Part has been awarded.</inlineHelpText>
        <label>Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Part_Number__c</fullName>
        <inlineHelpText>the CM&apos;s Part Number</inlineHelpText>
        <label>CM Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments about this Part for this Opportunity.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost_Set_75__c</fullName>
        <description>This is using in Edit All Top Layout displaying the calculation of CS75 when except for status &apos;Lost&apos;</description>
        <label>Cost Set 75</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GPL_Code__c</fullName>
        <label>GPL Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Description__c</fullName>
        <label>GPL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_CS_75__c</fullName>
        <formula>ANZ_Quantity__c * Cost_Set_75__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CostSet75 * Quantity</inlineHelpText>
        <label>Total Line CS75</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if this is a new product.</inlineHelpText>
        <label>NPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM_Part_Number__c</fullName>
        <inlineHelpText>the OEM Part Number</inlineHelpText>
        <label>OEM Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <inlineHelpText>The Part Number.</inlineHelpText>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Status_Description__c</fullName>
        <label>Part Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the part is Qualified.</inlineHelpText>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of this Part. (Open, Won, Lost or Dead)</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Unit_Name__c</fullName>
        <inlineHelpText>A division of the parts (IBM call it a &quot;card&quot;)</inlineHelpText>
        <label>Sub Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Print_Position__c</fullName>
        <inlineHelpText>Select the Print Position that TE holds for this part on this opportunity.</inlineHelpText>
        <label>TE Print Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>